# Fun-CosyVoice

./: .gitattributes  .gitignore  README.md  gradle.properties  settings.gradle.kts
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/java/com/fun/cosyvoice/: CosyVoiceAudioDecoder.kt  CosyVoiceEnrollmentNative.kt  CosyVoiceFlowNative.kt  CosyVoiceHiFTNative.kt  CosyVoiceInstruction.kt  CosyVoiceLlmNative.kt  CosyVoiceModelDownloader.kt  CosyVoiceRuntime.kt  CosyVoiceStore.kt  CosyVoiceVoiceProfile.kt  MainActivity.kt
app/src/main/res/values/: strings.xml  themes.xml
docs/: DEVELOPMENT_STORY.md  RESEARCH_MEMORY.md
gradle/: libs.versions.toml
mnn-jni/: CMakeLists.txt  CosyVoiceEnrollmentJni.cpp  CosyVoiceFlowBenchmark.cpp  CosyVoiceFlowConditionerBenchmark.cpp  CosyVoiceFlowJni.cpp  CosyVoiceFlowPersistentBenchmark.cpp  CosyVoiceHiFTBenchmark.cpp  CosyVoiceHiFTE2EBenchmark.cpp  CosyVoiceHiFTJni.cpp  CosyVoiceHiFTPersistentBenchmark.cpp  CosyVoiceLlmBenchmark.cpp  CosyVoiceLlmJni.cpp  CosyVoiceLlmPersistentBenchmark.cpp  CosyVoiceSpeechTokenizerBenchmark.cpp  CosyVoiceTwoStepFlowBenchmark.cpp  README.md
research/mnn-cosyvoice3/: README.md  STAGE3_FEASIBILITY.md  VOICE_ENROLLMENT_AND_INSTRUCT_PLAN.md  benchmark-hift-core-device.sh  build-cosytest-model-zip.ps1  build-enrollment-extension.ps1  build-stage1-android.ps1  build-stage2-android.ps1  convert-flow-phone-weights.ps1  convert-stage2-mnn.ps1  download-stage1.ps1  download-stage2.ps1  download-stage3.ps1  export-stage2-hift.ps1  provision-cosytest-model.ps1  run-phone-concurrent-benchmark.ps1  run-phone-e2e.ps1  run-phone-persistent-batch.ps1  run-stage1-android.ps1  run-stage2-android.ps1  run-stage3-cfg-distill.ps1  run-stage3-flow-steps.ps1  run-stage3-profile.ps1  setup-stage2-export-env.ps1  setup-stage3-cuda.ps1  stage1-manifest.json  stage2-manifest.json  stage3-manifest.json
research/mnn-cosyvoice3/cases/seq256/: onnx_metrics.json
research/mnn-cosyvoice3/cases/seq256-stable-fp16/: onnx_metrics.json
research/mnn-cosyvoice3/cases/seq256-stable-normal/: onnx_metrics.json
research/mnn-cosyvoice3/cases/seq32/: compare-onnx-vs-mnn-int8-cpu.json  compare_mnn_repeatability.json  compare_onnx_vs_mnn_cpu.json  compare_onnx_vs_mnn_cpu_explicit_pad.json  compare_onnx_vs_mnn_external_cpu.json  compare_onnx_vs_mnn_first_run.json  compare_onnx_vs_mnn_reload_inputs.json  mnn_after_3_runs.bin.json  mnn_after_4_runs.bin.json  mnn_after_5_runs.bin.json  mnn_cpu_explicit_pad_output.bin.json  mnn_cpu_nchw_output.bin.json  mnn_cpu_opt0_output.bin.json  mnn_cpu_output.bin.json  mnn_cpu_trace_output.bin.json  mnn_external_cpu.bin.json  mnn_first_run.bin.json  mnn_int8_cpu.bin.json  mnn_no_defer_2_runs.bin.json  mnn_no_defer_3_runs.bin.json  mnn_no_defer_4_runs.bin.json  mnn_reload_inputs.bin.json  mnn_repeat_a.bin.json  mnn_repeat_b.bin.json  mnn_trace_first200.tsv  onnx_metrics.json
research/mnn-cosyvoice3/cases/seq32-normalized/: compare_original_vs_normalized.json  onnx_metrics.json
research/mnn-cosyvoice3/cases/seq32-stable/: compare-original-vs-stable.json  mnn_cpu.bin.json  onnx_metrics.json
research/mnn-cosyvoice3/cases/seq32-stable-fp16/: compare-before-vs-gelu-stable.json  compare-onnx-vs-mnn-cpu.json  mnn_cpu.bin.json  onnx_metrics.json
research/mnn-cosyvoice3/cases/seq32-stable-normal/: compare-attention-rewrite.json  onnx_metrics.json
research/mnn-cosyvoice3/cases/seq414-batch1/: onnx_metrics.json
research/mnn-cosyvoice3/cases/seq414-cfg-student/: onnx_metrics.json
research/mnn-cosyvoice3/cases/seq414-realistic/: onnx_metrics.json
research/mnn-cosyvoice3/cases/seq516-cfg-student-2step/: onnx_metrics.json
research/mnn-cosyvoice3/data/: cfg_distill_texts_zh.txt
research/mnn-cosyvoice3/scripts/: analyze_flow_step_audio.py  build_two_step_cache.py  build_voice_profile.py  cache_cfg_teacher.py  capture_cfg_trajectory.py  download_artifacts.py  evaluate_cfg_student_audio.py  evaluate_two_step_endpoint.py  export_flow_conditioner.py  export_flow_estimator_variant.py  export_hift_phone_case.py  export_hift_split.py  export_two_step_phone_case.py  extract_cosyvoice_prompt_tokens.py  flow_reference.py  flow_step_ab.py  normalize_flow_onnx.py  profile_cosyvoice_pipeline.py  reconstruct_hift_output.py  stabilize_attention_onnx.py  stabilize_gelu_onnx.py  stabilize_softplus_onnx.py  train_cfg_student.py  validate_cosyvoice_hf_merge.py
